@@ -1,4 +1,9 @@
-﻿w17 30.01.2015 19:39:58 +0300 - build 4257
+﻿drkns 30.01.2015 19:26:48 +0200 - build 4258
+
+1. 0002708: Regexp "^(.*?\-\-)" != "^(.*?\-{2})"
+   Откат 4257 и исправление 3952.
+
+w17 30.01.2015 19:39:58 +0300 - build 4257
 
 1. M#0002708: Regexp "^(.*?\-\-)" != "^(.*?\-{2})"
    Вернул #define MINSTEP(cmp) - /a*?ca/ "abca" работает
